--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -1,3 +1,7 @@
 .wy-side-nav-search {
-    background-color: black;
+    background-color: #1A658F;
+}
+
+.wy-body-for-nav {
+    background-color: #C3D7EE;
 }
