--- a/jupyter-docs/_static/style.css
+++ b/jupyter-docs/_static/style.css
@@ -1,3 +1,4 @@
+@import 'https://fonts.googleapis.com/css?family=Poppins:400,600,700';
 /* Hide "Edit On GitHub" section*/
 .wy-breadcrumbs-aside { display: none !important;}
 
@@ -5,11 +6,53 @@
 .wy-breadcrumbs { display: none; }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
+    font-size: 1rem;
+    background-image: url("NCAR-Waves.png");
+    background-position: right 0% top 22%;
+    background-repeat: no-repeat;
+    background-color: #dbe2e9;
+}
+
+h1 {
+    text-align: center;
+    font-size: 1.75rem;
+    font-weight: 700;
+}
+h2 {
+    text-align: center;
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 1.75rem;
+    font-weight: 700;
+    color: #A8C700;
 }
 
 .print-main-content {
     background-color: #53565A;
+}
+
+.bg-dark {
+    background-color: #012169;
+}
+
+.navbar-dark {
+    background-color: #012169;
+}
+
+.navbar {
+    background-color: #012169;
+}
+
+.navbar-expand-lg {
+    background-color: #012169;
+}
+
+.banner-main {
+    background-color: #012169;
 }
 
 .wy-side-nav-search {
